Changes while recording

--- a/src/slides/01_01.md
+++ b/src/slides/01_01.md
@@ -55,4 +55,6 @@ Let's try this command.
 % cd ~/Desktop && npx degit LinkedInLearning/css-scrolling-parallax-2835103 parallax
 ```
 
+Since this is a brand new repo, you'll still need to initialize git, create a repo and push this to Github, but it's the fastest way to get started with a clean history.
+
 I'm going to be using something like this to copy clean Github projects when I show you other challenges.
