--- a/src/slides/01_02.md
+++ b/src/slides/01_02.md
@@ -17,25 +17,47 @@ I'll give you a couple of seconds to pause the video and see how you'd have solv
 
 One of the first commands you learn when working with Github is how to merge your changes onto a master branch.
 
-Merging is the more common of the merge commands, but there's another merging strategy that will work better to create a more linear history that take into account other changes that users might have performed.
+Merging is the more common of the merge commands, but there's another merging strategy that will work better to create a more linear history that takes into account other changes that users might have performed.
 
-Here I have a project and I've started a feature branch called newfeature. Let's go ahead and push this to Github.
+Here's a copy of the project on my local machine. Right now I'm on a branch called cleanup.
 
+To see the commit history, I can issue a
+
+```
+git long --oneline
+```
+
+That shows me two commits.
+
+I've already added the project to Github. Right now there's only one branch...our main branch. You can see that I've done several commits to the project by adding the /commits to the end of the URL.
+
+You can see that I have more commits on Github than in my local cleanup branch. This means that some additional work has been done to the project.
+
+Let's go back to my editor.
+
+I want to delete the .github folder, it has a couple of templates that I'm not going to need anymore.
+
+Lets add and commit the changes to Github.
+
+```
 git add -A
-git commit -m "Finished editing the header for the site"
+git commit -m "Deleted .github folder templates "
 git push
+```
 
 Let's switch over to Github and take a look at what's happening there.
 
 I can see that my new commits generated the option to create a pull request.
 
-We can take a look at the changes, which are pretty simple.
-
-However if we were to look at the history, someone already made changes to the project.
-
 When you merge a project you have three options for making the changes. The most common is the merge.
 
-However the third option...a rebase will give us a cleaner history. Here's how it's different.
+However the third option...a rebase will give us a cleaner history.
+
+Let's go ahead and take care of that.
+
+| SCREEN RECORDING
+
+Here's how it's different.
 
 ---
 
@@ -52,7 +74,12 @@ A couple of important notes
 
 # Important
 
-- A Rebase is destructive unlike merge
+- A rebase is destructive unlike merge
   Alghought it creates a cleaner history, rebase is adding new commits to the end of a branch and these are similar, but technically different than commits you've done in the past.
+
 - Don't rebase a public branch
   Because of this, it's important that you don't rebase a public branch, because to create the cleaner history, it's ignoring your original branch and making new copies of your commits on the branch your rebasing to.
+
+# Conclusion
+
+Learning to Rebase instead of merge is one of the first signs you're turning into a more advanced Github user.
