--- a/src/slides/01_03.md
+++ b/src/slides/01_03.md
@@ -9,9 +9,9 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 # Add an Issue from the Terminal
 
-Anything that slows you down is an opportunity for optimization. A lot of times, in order to get to a repo I launch a browser, go to github, click on repos and do a search for a repo I'm working on. Many editors offer quicker ways to get to the repo you're working on. But my solution does a ton of other stuff. How would you approach getting to your repo?
+Anything that slows you down is an opportunity for optimization. A lot of times, in order to get to a repo I launch a browser, go to github, click on repos and do a search for a repo I'm working on. Then, I might click on the issues tab and start a new issue. What's the fastest way to create an issue directly from the terminal?
 
-I'll give you a couple of seconds to pause the video and see how you'd have solved it.
+I'll give you a couple of seconds to pause the video and think about how you might do this?
 
 My solution for this is the Github CLI.
 
@@ -29,7 +29,7 @@ Once you install it, you'll have all kinds of additional github commands you can
 
 ```
 gh issue create
-Title Check the grammar on this document
+Title Add some docs to this project
 Body ...
 Add metadata
 What would you like to add? Assignees, Labels
