--- a/src/slides/01_04.md
+++ b/src/slides/01_04.md
@@ -9,9 +9,9 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 # Deleting your Commit History
 
-Git is such a fantastic tool, and it' a great idea to commit and push often, since it's a great way to store changes to a project in the cloud, but ocassionally, I'd like to publish a project on Github with a clean commit history. How would you delete ALL commit history on Github.
+Git is such a fantastic tool, and it' a great idea to commit and push often, because it's a great way to store changes to a project in the cloud, but ocassionally, I'd like to publish a project on Github with a clean commit history. How would you delete ALL commit history of an existing branch on Github?
 
-I'll give you a couple of seconds to pause the video and see how you'd have solved it.
+I'll give you a couple of seconds to pause the video and think about how you might solve this.
 
 Here's what I would do. You can create what's called an orphan branch. This is a branch that has all of the files as the current branch without any history.
 
