--- a/src/slides/01_05.md
+++ b/src/slides/01_05.md
@@ -9,11 +9,11 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 # Fixing a committed password
 
-Ocassionaly, you may end up pushing a commit or a file that has some sensitive information, like a password or API key. You don't want to destroy your entire history, but make a more surgical change. Assumig you've submitted a file with a password and then some other commits, how do you make sure Github doesn't store passwords in it's history.
+Ocassionaly, you may end up pushing a commit or a file that has some sensitive information, like a password or API key. You don't want to destroy your entire history, but make a more surgical change. Assuming you've submitted a file with a password and then some other commits, how do you make sure Github doesn't store passwords in it's history.
 
-I'll give you a couple of seconds to pause the video and see how you'd have solved it.
+I'll give you a couple of seconds to pause the video and think about how can solved this
 
-Alright. There's a few ways to do this and in the last video, I showed you how to delete the entire history of a project. For this one. In a previous video, I showed you how to do a rebase, but we need more surgical and I'm going to use regular Git to take care of it.
+Alright. There's a few ways to do this and in the last video, I showed you how to delete the entire history of a project. For this one, we need more surgical and I'm going to use regular Git to take care of it.
 
 Here's a project where I've done a series of commits and you can see here that I have one here called "uploaded credentials". That's what I want to get rid of, but I've done a few commits after that.
 
@@ -21,13 +21,15 @@ You can see commits on Github by adding the `/commits` to the URL of the project
 
 I have this same project in my local hard drive and to take care of it, I'm going to do an interactive rebase, but first, let's see the list of commits on our local machine.
 
-I can do that by issuing a `git log --oneline`. I like the online option because it makes the log a lot shorter.
+I can do that by issuing a `git log --oneline`. I like the oneline option because it makes the log a lot shorter.
 
 We uploaded the credentials on this commit. We want to delete that commit from history, but also make sure that the other changes to the repo are accepted.
 
 First, we need to do a commit that deletes this authentication file.
 
+```
 git add -A && git commit -m "Deleted Authentication"
+```
 
 Now, lets do an interactive rebase.
 
