--- a/src/slides/01_07.md
+++ b/src/slides/01_07.md
@@ -3,13 +3,9 @@ title: Update Certain Branches
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
-<!-- .slide: data-state="layout-title" class="bg-dark"-->
-
----
-
 # Update Certain Branches
 
-Alright, it's time to ramp things up a bit. Nothing makes developers more angry that having to do repetitive tasks. We'd like to replace everything with a small script, so let's say you're working on a project and a new version of some library you're using gets updated. You have a few branches with the files. How would you automate something like this?
+Alright, it's time to ramp things up a bit. Nothing makes developers more angry that having to do repetitive tasks. We'd like to replace everything with a small script, so let's say you're working on a project and a new version of some library you're using gets updated. You have more than one branch that you need to push this update to. How would you automate something like this?
 
 I'll give you a couple of seconds to think about how you'd do something like this.
 
