--- a/src/slides/01_08.md
+++ b/src/slides/01_08.md
@@ -7,7 +7,7 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 ---
 
-# Automating Tasks
+# Processing All Branches
 
 Using bash was a lot of fun, so let's do another one. This time, I want you to try to go through every branch of a repo...no matter how many branches there are and then copy a certain folder in each branch of the repo, to another folder on your desktop. Each branch should go in it's own folder.
 
