--- a/src/slides/01_09.md
+++ b/src/slides/01_09.md
@@ -7,9 +7,15 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 # Run Lighthouse Audit on Push
 
-One of the cool thing that Github actions can do is run linux commands as if you were typing them from the terminal. We can install npm scripts and generate audits and all types of reports including a Lighthouse audit. So how would your run something like that?
+It would be great if we could run some performance and usability reports whenever someone pushed something to our site. But how would you do something like that?
 
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
+
+To take care of this, I'm suing Github Actions. They offer a whole new way to process run automation on your repositories.
+
+There's a few things I've done to this repo to prepare it. First, I changed the name of the folder where my site is from build to docs.
+
+I've also made sure that this repo is being published using Github Pages.
 
 This technique can help you anytime you want github to run some linux command on your site. Let's take a look at what I'm doing here by taking a look at the actions code.
 
