--- a/src/slides/01_09.md
+++ b/src/slides/01_09.md
@@ -23,7 +23,7 @@ I added a few photos to my site under the photos folder, so that's what I want t
 
 I've installed the [squoosh CLI](https://github.com/GoogleChromeLabs/squoosh/tree/dev/cli) globally
 
-```
+```bash
 npm i -g @squoosh/cli
 ```
 
@@ -47,7 +47,7 @@ showHelp() {
 
 I start off with a funciton that prints out what happens if someone makes a mistake.
 
-```
+```bash
 # Get the options from arguments passed to project
 # Folder Name is required
 while getopts "pf:" opt
@@ -72,14 +72,14 @@ If the argument is P, we have to create a variable with a folder name. The argum
 
 Finally, if someone types in the ? mark, then they get the help text.
 
-```
+```bash
 # Look for filesnames than end in jpg, but are not thumbnails
 filenames=`find ./$args_folder/*.jpg ! -name '*_tn*'`
 ```
 
 This next bit is helpful if we're re-running the command, I want to make sure that I look in the folder for files that are not thumbnails...no point compressing those.
 
-```
+```bash
 # Go through each file and remove files of they  already have thumbnails
 for item in ${filenames[@]}
 do
@@ -89,7 +89,7 @@ done
 
 In this part I make sure that as I go through the files in the folder, I don't process any files that already have thumbnails, so I'm removing files from the array I'm going to use if they already have thumbnails.
 
-```
+```bash
 # Check out a new branch
 if [ "$args_action" = "PUSH" ];
 then
@@ -99,7 +99,7 @@ fi
 
 Before we great the thumbnails, if we asked that there'd be a push command, then I want to check out a new branch called thubnails.
 
-```
+```bash
 # Create the thumbnails
 squoosh-cli $filenames -d ./$args_folder -s '_tn' --resize '{"enabled":true,"width":500,"method":"lanczos3","fitMethod":"contain","premultiply":true,"linearRGB":true}' --mozjpeg '{"quality":75,"baseline":false,"arithmetic":false,"progressive":true,"optimize_coding":true,"smoothing":0,"color_space":3,"quant_table":3,"trellis_multipass":false,"trellis_opt_zero":false,"trellis_opt_table":false,"trellis_loops":1,"auto_subsample":true,"chroma_subsample":2,"separate_chroma_quality":false,"chroma_quality":75}'
 ```
@@ -108,7 +108,7 @@ Now it's time to create the thumbnails, this is pretty similar to what you get f
 
 Then I'm specifying the compression type. I used the mozjpeg format.
 
-```
+```bash
 # push the branch to the repository origin
 if [ "$args_action" = "PUSH" ];
 then
@@ -120,6 +120,10 @@ fi
 ```
 
 Finally, again if the push option is set up, then it will send the files to Github.
+
+```bash
+~/git-thumbnails.sh -p -f 'photos'
+```
 
 In Github it will show up as a pull request and we can even preview the files.
 
