--- a/src/slides/01_12.md
+++ b/src/slides/01_12.md
@@ -23,7 +23,8 @@ I'm going to modify the `on` section of the action so that it uses cron to run a
 
 ```
 on:
-  cron: '30 8 * * *'
+  schedule:
+  - cron: '30 8 * * *'
 ```
 
 A cron command lets you use a special syntax that lets you specify a specific or a recurring date. It has five fields
