--- a/src/slides/01_09.md
+++ b/src/slides/01_09.md
@@ -7,7 +7,7 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 ---
 
-# Automating Tasks
+# Compressing Images and Thumbnails
 
 Let's try one more automation. One of the things that I do often for my sites is create thumbnail versions of certain files. Believe it or not, I used to open Photoshop to take care of this, so it would take forever to open the app and do the resizing. What I want to do is automate that so that I can execute a command to create thumbnails of files insome folder, then issue a pull request so I can review it on Github and accept the new thumbnails.
 
