--- a/src/slides/01_04.md
+++ b/src/slides/01_04.md
@@ -52,7 +52,7 @@ This is also a great way to reset things when playing with git and Github, but I
 
 ```
 git checkout --orphan clean_branch
-git commit -am "Squeaky Clean History"
+git commit -am "First Commit"
 git branch -D main
 git branch -m main
 git push -f origin main
