--- a/src/slides/01_11.md
+++ b/src/slides/01_11.md
@@ -9,9 +9,9 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 > >
 
-When working with project, it's really important to be able to store certain ids, variables and special passwords securely. For this Challenge, I want you to store a secret using Github, and retrieve it using Github Actions.
+When working with projects, it's really important to be able to store certain ids, variables and special passwords securely. For this Challenge, I want you to store a secret using Github, and retrieve it using Github Actions.
 
-I'll give you a couple of seconds to pause the video and see how you'd have solved it.
+I'll give you a couple of seconds to pause the video and think about how you'd have solved it.
 
 To store a secret in Github, you'll need to
 
