--- a/src/slides/00_01.md
+++ b/src/slides/00_01.md
@@ -5,16 +5,16 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# The Most Popular
+# Github
 
 > >
 
-Over the years there's been a lot of contenders for the number one front-end toolkit in the world, but although many have come and go, Bootstrap remains at the top.
+With more than 65 million developers and 200 million repositories, Github is the place that developers use to build, ship and maintain code.
 
-I think the reason its so popular is simplicity. Simpler is always better. Under the hood Bootstrap is extremely powerful and has been battle tested by an army of web developers for almost a decade.
+Hey there, this is Ray Villalobos and in this course, I'm going to challenge you to use Github to solve different problems on your projects.
 
-In this course, I'm going to cover every component and class in the framework. I'm going to focus on the CSS version of Bootstrap and give you about 100 codepens with sample code that you can try, copy and follow along with.
+We'll start out with some basic Git Commands, do a bit of time traveling by changing histories, then move on to automation using the terminal and bash scripts. We'll end up with different ways to use Github Actions to run accessibility audits, use secrets, build and deploy your sites.
 
-It's a big course, so you can watch it sequentially, jump around to just what you need or come back when you need a refresher on one of the features.
+Most solutions are less than a dozen lines of code. Most videos can be watched on their own and don't require you to have completed the previous challenges.
 
-I'm excited to show you what this new version of bootstrap can do. So let's get started.
+So good luck and let's get hubbing.
